# Ascend-mssanitizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  dependencies.json  download_dependencies.py
cmake/: CMakeLists.txt  options.cmake
cmake/module/: Secodefuzz.cmake  googletest.cmake  llvm.cmake  preparePackage.cmake  securec.cmake
csrc/: CMakeLists.txt  main.cpp
csrc/address_sanitizer/: CMakeLists.txt  address_sanitizer.cpp  address_sanitizer.h  align_checker.cpp  align_checker.h  asan_action.cpp  asan_action.h  bounds_check.cpp  bounds_check.h  error_buffer.cpp  error_buffer.h  heap_block_manager.cpp  heap_block_manager.h  mem_error_def.h  pm.cpp  pm.h  shadow_memory.cpp  shadow_memory.h
csrc/core/: CMakeLists.txt  cli_parser.cpp  cli_parser.h
csrc/core/framework/: CMakeLists.txt  arch_def.h  call_stack.cpp  call_stack.h  checker.cpp  checker.h  command.cpp  command.h  communication.cpp  communication.h  config.h  constant.h  device_manager.cpp  device_manager.h  event_def.h  file_mapping.cpp  file_mapping.h  format_converter.cpp  format_converter.h  kernel_binary_manager.cpp  kernel_binary_manager.h  kernel_block.cpp  kernel_block.h  kernel_manager.cpp  kernel_manager.h  platform_config.h  process.cpp  process.h  protocol.cpp  protocol.h  record_defs.h  record_format.cpp  record_format.h  record_parse.cpp  record_parse.h  record_parse_calc.cpp  record_parse_calc.h  record_parse_ctrl.cpp  record_parse_ctrl.h  record_parse_move.cpp  (+9 more)
csrc/core/framework/utility/: cmd.cpp  cmd.h  cpp_future.h  domain_socket.cpp  domain_socket.h  elf_loader.h  file_system.cpp  file_system.h  log.cpp  log.h  macros.h  numeric.h  path.cpp  path.h  result.cpp  result.h  serializer.h  singleton.h  struct.h  type_traits.h  types.h  umask_guard.h  ustring.cpp  ustring.h
csrc/hooks/: CMakeLists.txt  ascend_hal_stub.cpp  basic_hooks.cpp  handle_mapping.h  hook_logger.h  hook_report.cpp  hook_report.h  hooks_verify.cpp  hooks_verify.h  runtime_hooks.cpp  sanitizer_hooks.cpp  vallina_symbol.h
csrc/hooks/acl_hooks/: CMakeLists.txt  acl_hooks.cpp
csrc/hooks/api/: sanitizer.h
csrc/hooks/api/acl/: acl.h
csrc/hooks/ascendc_hooks/: CMakeLists.txt  ascendc_hooks.cpp  dev_mem_manager.h
csrc/hooks/hal_hooks/: CMakeLists.txt  hal_hooks.cpp
csrc/include/: CMakeLists.txt  sanitizer_report.h
csrc/plugin/: CMakeLists.txt  addr_process.h  clang_interface.cpp  clang_interface.h  kernel_pub_func.h  memcheck.h  online_check.h  parse_record.h  record_calc_instructions.h  record_ctrl_instructions.h  record_move_instructions.h  record_mstx_instructions.h  record_simt_instructions.h  record_sync_instructions.h  record_type_map.h  recorder.h  shadow_memory_online.h  utils.h
csrc/plugin/ccec/: CMakeLists.txt  ctrl_instructions.cpp  mstx_instructions.cpp  sync_instructions.cpp
csrc/plugin/ccec/calc_instructions/: cmpmask.cpp  mad.cpp  scattervnchwconv.cpp  vaadd.cpp  vabs.cpp  vadd.cpp  vadddeqrelu.cpp  vaddrelu.cpp  vaddreluconv.cpp  vadds.cpp  vand.cpp  vaxpy.cpp  vbitsort.cpp  vbrcb.cpp  vcadd.cpp  vcbd.cpp  vcgadd.cpp  vcgmax.cpp  vcgmin.cpp  vcmax.cpp  vcmin.cpp  vcmp.cpp  vcmpv.cpp  vcmpvs.cpp  vconcat.cpp  vconv.cpp  vcopy.cpp  vcpadd.cpp  vdiv.cpp  vector_dup.cpp  vexp.cpp  vextract.cpp  vgather.cpp  vgatherb.cpp  viou.cpp  vld_va_reg.cpp  vln.cpp  vlrelu.cpp  vmadd.cpp  vmaddrelu.cpp  (+28 more)
csrc/plugin/ccec/dbi/: CMakeLists.txt  dynamic_bind.cpp
csrc/plugin/ccec/dbi/probes/: CMakeLists.txt  cube_instructions.cpp  cube_mte_registers.cpp  dc_preload.cpp  dma_mov.cpp  (+15 more)
csrc/plugin/ccec/move_instructions/: broadcast_cc.cpp  dc_preload.cpp  decompress_gm.cpp  dma_mov.cpp  load_2d.cpp  load_3d.cpp  load_b2.cpp  load_image.cpp  load_smask.cpp  load_store.cpp  load_winograd.cpp  mov_align.cpp  mov_bt.cpp  mov_fp.cpp  set_2d.cpp
csrc/race_sanitizer/: CMakeLists.txt  race_info_display.h  race_sanitizer.cpp  race_sanitizer.h
csrc/race_sanitizer/alg_framework/: cross_core_race_alg_impl.cpp  cross_core_race_alg_impl.h  cross_core_sync_info_container.cpp  cross_core_sync_info_container.h  event_container.cpp  event_container.h  mem_event_checker.cpp  mem_event_checker.h  mem_series.cpp  mem_series.h  pipe_line.cpp  pipe_line.h  race_alg_base.cpp  race_alg_base.h  race_alg_factory.cpp  race_alg_factory.h  race_alg_impl.cpp  race_alg_impl.h  single_pipe_race_alg_impl.cpp  single_pipe_race_alg_impl.h  sync_event_data_base.cpp  sync_event_data_base.h  vector_clock.cpp  vector_clock.h
csrc/register_sanitizer/: register_info_display.h  register_sanitizer.cpp  register_sanitizer.h
csrc/scripts/: mssanitizer
csrc/stub_def/: CMakeLists.txt  stub_def.cpp  stub_def.h
csrc/sync_sanitizer/: sync_info_display.h  sync_sanitizer.cpp  sync_sanitizer.h
test/: CMakeLists.txt  generate_coverage.sh
test/ut/: CMakeLists.txt
test/ut/address_sanitizer/: test_address_sanitizer.cpp  test_align_checker.cpp  test_bounds_check.cpp  test_mem_error_def.cpp  test_pm.cpp  test_shadow_memory.cpp
test/ut/core/: CMakeLists.txt  test_cli_parser.cpp
test/ut/core/framework/: test_checker.cpp  test_command.cpp  test_communication.cpp  test_device_manager.cpp  test_file_mapping.cpp  test_format_converter.cpp  test_kernel_binary_manager.cpp  test_kernel_manager.cpp  test_process.cpp  test_protocol.cpp  test_record_format.cpp  test_record_parse.cpp  test_record_parse_move.cpp  test_type_map.cpp
test/ut/hooks/: test_hooks_verify.cpp
test/ut/plugin/: ccec_defs.h  test_memcheck.cpp  test_recorder.cpp  test_utils.cpp
test/ut/plugin/ccec/: data_process.cpp  data_process.h  test_mstx_instructions.cpp  test_sync_instructions.cpp
test/ut/race_sanitizer/: rand_data.h  test_cross_core_race_alg_impl.cpp  test_cross_core_sync_info_container.cpp  test_event_container.cpp  test_mem_event_checker.cpp  test_race_alg_impl.cpp  test_race_sanitizer.cpp  test_single_pipe_race_alg_impl.cpp  test_sync_event_data_base.cpp  test_vector_clock.cpp
test/ut/register_sanitizer/: test_register_sanitizer.cpp
test/ut/stub_def/: test_stub_def.cpp
test/ut/sync_sanitizer/: test_sync_sanitizer.cpp
test/ut/test_utility/: temp_file_guard.h
(+129 files in other folders)
